@@ -634,6 +634,10 @@ class xPDO {
         return $objCollection;
     }
 
+    public function getIterator($className, $criteria= null, $cacheFlag= false) {
+        return new xPDOIterator($this, array('class' => $className, 'criteria' => $criteria, 'cacheFlag' => $cacheFlag));
+    }
+
     /**
      * Remove an instance of the specified className by a supplied criteria.
      *
@@ -798,6 +802,24 @@ class xPDO {
      */
     public function getCriteria($className, $type= null, $cacheFlag= true) {
         return $this->newQuery($className, $type, $cacheFlag);
+    }
+
+    /**
+     * Validate and return the type of a specified criteria variable.
+     *
+     * @param mixed $criteria An xPDOCriteria instance or any valid criteria variable.
+     * @return string|null The type of valid criteria passed, or null if the criteria is not valid.
+     */
+    public function getCriteriaType($criteria) {
+        $type = gettype($criteria);
+        if ($type === 'object') {
+            $type = get_class($criteria);
+            if (!$criteria instanceof xPDOCriteria) {
+                $this->xpdo->log(xPDO::LOG_LEVEL_WARN, "Invalid criteria object of class {$type} encountered.", '', __METHOD__, __FILE__, __LINE__);
+                $type = null;
+            }
+        }
+        return $type;
     }
 
     /**
@@ -2263,5 +2285,113 @@ class xPDOCriteria {
             $sql = $this->xpdo->parseBindings($sql, $this->bindings);
         }
         return $sql;
+    }
+}
+
+/**
+ * An iteratable representation of an xPDOObject result set.
+ *
+ * Use an xPDOIterator to loop over large result sets and work with one instance
+ * at a time. This greatly reduces memory usage over loading the entire collection
+ * of objects into memory at one time. It is also slightly faster.
+ */
+class xPDOIterator implements Iterator {
+    private $xpdo = null;
+    private $index = 0;
+    private $current = null;
+    private $stmt = null;
+    private $class = null;
+    private $alias = null;
+    private $criteria = null;
+    private $criteriaType = 'xPDOQuery';
+    private $cacheFlag = false;
+    private $loader = null;
+
+    /**
+     * Construct a new xPDOIterator instance (do not call directly).
+     *
+     * @see xPDO::getIterator()
+     * @param xPDO &$xpdo A reference to a valid xPDO instance.
+     * @param array $options An array of options for the iterator.
+     * @return xPDOIterator An xPDOIterator instance.
+     */
+    function __construct(& $xpdo, array $options= array()) {
+        $this->xpdo =& $xpdo;
+        if (isset($options['class'])) {
+            $this->class = $this->xpdo->loadClass($options['class']);
+        }
+        if (isset($options['alias'])) {
+            $this->alias = $options['alias'];
+        } else {
+            $this->alias = $this->class;
+        }
+        if (isset($options['cacheFlag'])) {
+            $this->cacheFlag = $options['cacheFlag'];
+        }
+        if (isset($options['criteria']) && is_object($options['criteria'])) {
+            $this->criteria = $options['criteria'];
+        } elseif (!empty($this->class)) {
+            $this->criteria = $this->xpdo->getCriteria($this->class, null, $this->cacheFlag);
+        }
+        if (!empty($this->criteria)) {
+            $this->criteriaType = $this->xpdo->getCriteriaType($this->criteria);
+            if ($this->criteriaType === 'xPDOQuery') {
+                $this->class = $this->criteria->getClass();
+                $this->alias = $this->criteria->getAlias();
+            }
+        }
+        if ($this->class) {
+            $this->loader = $this->xpdo->getObjectLoader($this->class, '_loadInstance');
+        } else {
+            $this->xpdo->log(xPDO::LOG_LEVEL_ERROR, "xPDOIterator could not identify a class for the supplied criteria.");
+        }
+    }
+
+    public function rewind() {
+        $this->index = 0;
+        if (is_callable($this->loader)) {
+            if (!empty($this->stmt)) {
+                $this->stmt->closeCursor();
+            }
+            $this->stmt = $this->criteria->prepare();
+            if ($this->stmt && $this->stmt->execute()) {
+                $this->fetch();
+            }
+        }
+    }
+
+    public function current() {
+        return $this->current;
+    }
+
+    public function key() {
+        return $this->index;
+    }
+
+    public function next() {
+        if ($this->fetch()) {
+            $this->index++;
+        } else {
+            $this->index = null;
+        }
+        return $this->current();
+    }
+
+    public function valid() {
+        return ($this->current !== null);
+    }
+
+    /**
+     * Fetch the next row from the result set and set it as current.
+     *
+     * Uses the loader defined for the specified class, so it does respect security.
+     */
+    protected function fetch() {
+        $row = $this->stmt->fetch(PDO::FETCH_ASSOC);
+        if (is_array($row) && !empty($row)) {
+            $this->current = call_user_func_array($this->loader, array(& $this->xpdo, $this->class, $this->alias, $row));
+        } else {
+            $this->current = null;
+        }
     }
 }
