@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Add xPDO::getIterator() allowing more efficient traversing of result sets
 - Add script to upgrade older xPDO mysql models to SCHEMA_VERSION 1.1 
 - Add missing attributes in xPDOSimpleObject map index element
 - Do not generate primary key index for xPDOSimpleObject derivatives
